# torchani-service

./: .gitignore  Dockerfile  ENVIRONMENT_STATUS.md  LICENSE  Makefile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-local-registry.yml  release.yml
app/: __init__.py  config.py  main.py  tasks.py
app/api/: routes.py  schemas.py
app/core/: model_manager.py  optimizer.py
argocd/: application.yaml  appproject.yaml
docs/: CICD.md  SETUP_CHECKLIST.md
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pvc.yaml  redis.yaml  service.yaml
scripts/: check-prerequisites.sh  setup-cicd.sh  setup-github-repos.sh
